--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-cli
 url = https://cran.r-project.org/src/contrib/cli_1.0.1.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/r-lib/cli.git
 
 [autospec]
 # build 32 bit libraries
