--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-cli
-url = https://cran.r-project.org/src/contrib/cli_3.6.3.tar.gz
+url = https://ftp.osuosl.org/pub/cran/src/contrib/cli_3.6.4.tar.gz
 archives = 
 giturl = https://github.com/r-lib/cli.git
 domain = 
@@ -17,6 +17,8 @@ allow_test_failures = false
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = true
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
